--- a/index.html
+++ b/index.html
@@ -69,11 +69,11 @@
           </thead>
           <tbody>
             <tr>
-              <td>Oliver Kyomugisha</td>
-              <td>loan</td>
-              <td>-120,000.0</td>
-              <td>2020-07-02 1:58 am</td>
-              <td>Mlamu</td>
+              <td><a href="#">Oliver Kyomugisha</a></td>
+              <td><a href="#">loan</a></td>
+              <td><a href="#">-120,000.0</a></td>
+              <td><a href="#">2020-07-02 1:58 am</a></td>
+              <td><a href="#">Mlamu</a></td>
             </tr>
             <tr>
               <td>Kevin Namuwonge</td>
