--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
       href="https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap"
       rel="stylesheet"
     />
+    <script src="https://cdn.jsdelivr.net/gh/alpinejs/alpine@v2.x.x/dist/alpine.js" defer></script>
   </head>
 
   <body>
@@ -68,12 +69,12 @@
             </tr>
           </thead>
           <tbody>
-            <tr>
-              <td><a href="#">Oliver Kyomugisha</a></td>
-              <td><a href="#">loan</a></td>
-              <td><a href="#">-120,000.0</a></td>
-              <td><a href="#">2020-07-02 1:58 am</a></td>
-              <td><a href="#">Mlamu</a></td>
+            <tr class="item">
+              <td class="item"><a href="#">Oliver Kyomugisha</a></td>
+              <td class="item"><a href="#">loan</a></td>
+              <td class="item"><a href="#">-120,000.0</a></td>
+              <td class="item"><a href="#">2020-07-02 1:58 am</a></td>
+              <td class="item"><a href="#">Mlamu</a></td>
             </tr>
             <tr>
               <td>Kevin Namuwonge</td>
@@ -150,6 +151,21 @@
       </div>
       <!--end of psgination-->
       </div>
+
+      <div>
+        <p>here</p>
+      </div>
     </div>
+
+    <script type="text/javascript">
+      const gridContainer = document.querySelector(".container");
+
+        gridContainer.addEventListener("click", function ({ target: { className } }) {
+          if (className.includes('item')) {
+              alert("This alert box was called with the onload event");
+            this.style.gridTemplateColumns = "1fr 3fr 1fr";
+          }
+        });
+    </script>
   </body>
 </html>
