on click add a new column

--- a/index.html
+++ b/index.html
@@ -152,8 +152,28 @@
       <!--end of psgination-->
       </div>
 
-      <div>
-        <p>here</p>
+      <div class="details">
+        <div class="heading">
+          <span>
+            <h4>Transfer</h4>
+            <p>9:14PM, Feb. 15, 2019</p>
+          </span>
+          <i class="fa fa-times" aria-hidden="true"></i>
+        </div>
+        <div class"content">
+
+          <div class="sum">
+            <span>
+              <h3>-3000.00 EUR</h3>
+            <p>We Work</p>
+            </span>
+            <select>
+              <option value="0">Office rental</option>
+              <option value="1">Others</option>
+            </select>
+          </div>
+
+        </div>
       </div>
     </div>
 
